--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "flashcard-management-api",
   "version": "1.0.0",
   "description": "",
   "main": "dist/src/functions/*.js",
@@ -8,16 +8,19 @@
     "watch": "tsc -w",
     "clean": "rimraf dist",
     "prestart": "npm run clean && npm run build",
-    "start": "func start",
+    "start": "npm run prestart && func start",
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
-    "@azure/functions": "^4.0.0"
+    "@azure/data-tables": "^13.2.2",
+    "@azure/functions": "^4.0.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
-    "azure-functions-core-tools": "^4.x",
     "@types/node": "18.x",
-    "typescript": "^4.0.0",
-    "rimraf": "^5.0.0"
+    "@types/uuid": "^10.0.0",
+    "azure-functions-core-tools": "^4.x",
+    "rimraf": "^5.0.0",
+    "typescript": "^4.0.0"
   }
 }
